--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -4,17 +4,15 @@ import MainLayout from "../layouts/MainLayout.astro";
 import MainTitle from "../components/MainTitle.jsx";
 import { shopifyProjects } from "../constants/projects.js";
 import ProjectCard from "../components/ProjectCard.jsx";
-const featuredProjects = shopifyProjects.slice(0, 4);
+// const featuredProjects = shopifyProjects.slice(0, 4);
 ---
 
 <MainLayout>
   <!-- Hero Section -->
 
-  <section class=" text-white py-16 px-4">
+  <section class="text-white py-16 px-4">
     <div class="container mx-auto text-center max-w-4xl">
       <MainTitle client:load />
-      
-      
     </div>
   </section>
 
@@ -59,7 +57,9 @@ const featuredProjects = shopifyProjects.slice(0, 4);
             class="bg-shopify text-white w-12 h-12 rounded-full mx-auto flex items-center justify-center text-2xl font-bold">
             1
           </div>
-          <p class="text-amber-50 font-semibold mt-4 text-[18px]">Hablamos de tu negocio</p>
+          <p class="text-amber-50 font-semibold mt-4 text-[18px]">
+            Hablamos de tu negocio
+          </p>
           <!-- <p class="text-sm text-gray-600">(Sin términos complicados)</p> -->
         </div>
 
@@ -68,7 +68,9 @@ const featuredProjects = shopifyProjects.slice(0, 4);
             class="bg-shopify text-white w-12 h-12 rounded-full mx-auto flex items-center justify-center text-2xl font-bold">
             2
           </div>
-          <p class="text-amber-50 font-semibold mt-4 text-[18px]">Creamos tu tienda</p>
+          <p class="text-amber-50 font-semibold mt-4 text-[18px]">
+            Creamos tu tienda
+          </p>
           <p class="text-sm text-amber-50">Diseño profesional y funcional</p>
         </div>
 
@@ -77,7 +79,9 @@ const featuredProjects = shopifyProjects.slice(0, 4);
             class="bg-shopify text-white w-12 h-12 rounded-full mx-auto flex items-center justify-center text-2xl font-bold">
             3
           </div>
-          <p class="text-amber-50 font-semibold mt-4 text-[18px]">Te enseñamos a usarla</p>
+          <p class="text-amber-50 font-semibold mt-4 text-[18px]">
+            Te enseñamos a usarla
+          </p>
           <p class="text-sm text-amber-50">Capacitación personalizada</p>
         </div>
 
@@ -95,14 +99,13 @@ const featuredProjects = shopifyProjects.slice(0, 4);
 
   <!-- Casos Reales -->
   <section class="container mx-auto px-6 py-12">
-    
-    
-           <h1 class="text-amber-50 text-4xl md:text-5xl font-bold text-center mb-12 z-10">
-          Casos reales
-        </h1>
-    <div class="grid md:grid-cols-2 gap-8">
+    <h1
+      class="text-amber-50 text-4xl md:text-5xl font-bold text-center mb-12 z-10">
+      Casos reales
+    </h1>
+    <div class="grid md:grid-cols-2 lg:grid-cols-3 gap-6">
       {
-        featuredProjects.map((project) => (
+        shopifyProjects.map((project) => (
           <ProjectCard project={project} client:load />
         ))
       }
