--- a/src/layouts/MainLayout.astro
+++ b/src/layouts/MainLayout.astro
@@ -28,7 +28,7 @@ const {
   <meta property="og:image" content="/social-preview.jpg" /> -->
 
     <!-- Favicon -->
-    <link rel="icon" type="image/svg+xml" href="/g.png" />
+    <link rel="icon" type="image/svg+xml" href="/favicon-tienda.png" />
 
     <!-- Scripts de animación (GSAP) -->
     <script
